[package]
name = "untitled11"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.10.0"
prost = "0.10"

[build-dependencies]
prost-build = "0.8" # 编译 protobuf