[package]
name = "FishBone_Cli"
version = "0.1.0"
edition = "2021"
authors = ["Saltedfish"]
about = "FishBone_Cli is a command line interface for FishBone to Create/Get/Delete Paste."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
tokio = { version = "1", features = ["full"] }
once_cell = "1.10.0"
prost = "0.10"
base64 = "0.13" # base64 编码/解码
anyhow = "1"
rust-crypto = "0.2.36"
evpkdf = "0.1.1"
md-5 = "0.9"
#hex-literal = "0.3"
termimad = "0.20.1"
clap = { version = "3.1.7", features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
content_inspector = "0.2.4"
rand = "0.8.5"
detect-lang = {git = "https://github.com/lx200916/detect-lang.git"}
crossterm = "0.22.1"
terminal-clipboard = "0.3.1"

atty = "0.2.14"
syntect = "4"
#[dependencies.hex]
#version = "0.4"
#default-features = false
#features = ["std"]

[build-dependencies]
prost-build = "0.8" # 编译 protobuf